feat: 241 Verify OTP (#242)