@@ -44,13 +44,4 @@ object Settings {
       discardNonUnitAssertion,
     ),
   )
-
-  lazy val JavaOptions = javaOptions ++= Seq(
-    "-Xmx2G",
-    "-XX:+UseZGC",
-    "-XX:+ZGenerational",
-    "-XX:+IgnoreUnrecognizedVMOptions",
-    "--add-opens=java.base/java.lang=ALL-UNNAMED",
-    "--add-opens=java.base/java.util=ALL-UNNAMED",
-  )
 }
